public class Figura {
    public double calcularArea() {
        return 0;
    }

    @Override
    public String toString() {
        return "Figura sin ninguna propiedad";
    }
}